--- a/Views/Customers/Index.cshtml
+++ b/Views/Customers/Index.cshtml
@@ -1,24 +1,63 @@
-@model webPay.Models.PageAttribute.CustomersPageAttribute
 @{
-    ViewBag.Title = "title";
-    Layout = "_Layout";
+ViewBag.Title = "Customers";
+Layout = "~/Views/Shared/_Layout.cshtml";
 }
-<table class="table table-bordered table-hover">
+
+<h2>Customers</h2>
+
+<table id="customers" class="table table-bordered table-hover">
     <thead>
     <tr>
-        <th>Customer</th>
-        <th>membershipType</th>
+
+       <th>Customer</th>
+        <th>Membership Type</th>
+        <th>Delete</th>
     </tr>
     </thead>
-    <tbody>
-    @foreach (var customer in @Model.Customers)
-    {
-        <tr>
-        <td>@Html.ActionLink(customer.Name, "Edit", "Customers", new { id = customer.Id }, null)</td>
-        <td>@customer.MemberShipType.Name</td>
-        </tr>
-    }
-    </tbody>
+    <tbody></tbody>
 </table>
 
-
+@section scripts
+{
+<script>
+    $(document).ready(function () {
+        $("#customers").DataTable({
+            ajax: {
+                url: "/api/customers",
+                dataSrc: ""
+            },
+            columns: [
+                {
+                    data: "name",
+                    render: function(data, type, customer) {
+                        return "<a href='/customers/edit/" + customer.id + "'>" + customer.name + "</a>";
+                    }
+                },
+                {
+                    data: "name"
+                },
+                {
+                    data: "id",
+                    render: function(data) {
+                        return "<button class='btn-link js-delete' data-customer-id=" + data + ">Delete</button>";
+                    }
+                }
+            ]
+        });
+        $("#customers").on("click", ".js-delete", function () {
+            var button = $(this);
+            bootbox.confirm("Are you sure you want to delete this customer?", function (result) {
+                if (result) {
+                    $.ajax({
+                        url: "/api/customers/" + button.attr("data-customer-id"),
+                        method: "DELETE",
+                        success: function () {
+                            button.parents("tr").remove();
+                        }
+                    });
+                }
+            });
+        });
+    });
+</script>
+}
